# clinicalReportSummarizer

./: Summary.docx  app.py  pyproject.toml
